--- a/ckanext/lamma/public/css/lamma.css
+++ b/ckanext/lamma/public/css/lamma.css
@@ -101,6 +101,24 @@ a {
   width: 300px;
 }
 
+.format-label[data-format=zip], .format-label[data-format*=zip] {
+  background: url(../images/zip-image-small.png) no-repeat;
+}
+
+.format-label[data-format=wms], .format-label[data-format*=wms] {
+  background: url(../images/world-map-small.png) no-repeat right top;
+}
+
+a.tag:hover {
+  text-decoration: none;
+  color: #fff;
+  background-color: #222b43;
+  border: 1px solid #222b43;
+  -webkit-box-shadow: inset 0 1px 0 #222b43;
+  -moz-box-shadow: inset 0 1px 0 #222b43;
+  box-shadow: inset 0 1px 0 #222b43;
+}
+
 /*----------------Override of ckanext-mapstore css---------------------*/
 
 .dataset-resources .basket-label-cart {
